syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "akkaserverless/annotations.proto";

package devicecontrol;

import "domain/wirelessmeshdomain.proto";

service DeviceControlService {
    rpc SendNightlightToggled(wirelessmeshdomain.NightlightToggled) returns (google.protobuf.Empty) {
        option (akkaserverless.method).eventing = {
            in: {
                event_log: "customer-location-entity";
            }
        };
    }

    // handle other events which are not managed above
    rpc CatchOthers(google.protobuf.Any) returns (google.protobuf.Empty) {
        option (akkaserverless.method).eventing = {
            in: {
                event_log:  "customer-location-entity"
            }
        };
    };
}
